--- a/untitled.ui
+++ b/untitled.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>819</width>
-    <height>480</height>
+    <width>914</width>
+    <height>637</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,10 +16,10 @@
   <widget class="QTreeWidget" name="treeWidget">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>0</y>
+     <x>10</x>
+     <y>10</y>
      <width>171</width>
-     <height>471</height>
+     <height>391</height>
     </rect>
    </property>
    <column>
@@ -31,8 +31,8 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>30</y>
+     <x>700</x>
+     <y>50</y>
      <width>101</width>
      <height>41</height>
     </rect>
@@ -41,24 +41,11 @@
     <string>重启</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
-   <property name="geometry">
-    <rect>
-     <x>440</x>
-     <y>30</y>
-     <width>101</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>截图</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>640</x>
-     <y>30</y>
+     <x>520</x>
+     <y>170</y>
      <width>101</width>
      <height>41</height>
     </rect>
@@ -70,9 +57,9 @@
   <widget class="QTextBrowser" name="textBrowser">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>280</y>
-     <width>601</width>
+     <x>10</x>
+     <y>440</y>
+     <width>891</width>
      <height>192</height>
     </rect>
    </property>
@@ -80,8 +67,8 @@
   <widget class="QPushButton" name="pushButton_4">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>450</y>
+     <x>10</x>
+     <y>380</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -93,10 +80,10 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>160</y>
-     <width>601</width>
-     <height>101</height>
+     <x>200</x>
+     <y>340</y>
+     <width>631</width>
+     <height>91</height>
     </rect>
    </property>
    <property name="title">
@@ -105,8 +92,8 @@
    <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>40</y>
+      <x>20</x>
+      <y>30</y>
       <width>341</width>
       <height>41</height>
      </rect>
@@ -119,7 +106,7 @@
     <property name="geometry">
      <rect>
       <x>370</x>
-      <y>40</y>
+      <y>30</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -132,7 +119,7 @@
     <property name="geometry">
      <rect>
       <x>490</x>
-      <y>40</y>
+      <y>30</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -145,8 +132,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>415</y>
+     <x>20</x>
+     <y>350</y>
      <width>151</width>
      <height>21</height>
     </rect>
@@ -154,6 +141,45 @@
    <property name="text">
     <string/>
    </property>
+  </widget>
+  <widget class="QGroupBox" name="groupBox_2">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>10</y>
+     <width>231</width>
+     <height>321</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>截图</string>
+   </property>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>30</y>
+      <width>131</width>
+      <height>231</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>270</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>截图</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
